Fixed bug with rezizing reponsivity and z-index

--- a/src/style.css
+++ b/src/style.css
@@ -602,11 +602,11 @@ button {
     position: absolute;
     height: 100%;
     width: 100%;
-    background-color: rgb(0 0 0 / 30%);
     display: flex;
+    background-color: rgb(0 0 0 / 30%);
     justify-content: center;
     align-items: center;
-    z-index: 1;
+    z-index: 2;
 }
 
 .second-display-menu {
